# nova-sftp-explorer

./: .gitignore  LICENSE  README.md  preview.py  pyproject.toml  requirements.txt  sftp.py  sftp_client.py  ui.py
tests/: test_preview.py
