[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-sftp-explorer"
version = "0.1.0"
description = "Modern SFTP explorer with remote preview-first workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Tanmoy" }
]
keywords = ["sftp", "explorer", "paramiko", "gui", "customtkinter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: File Transfer Protocol (FTP)",
  "Topic :: Utilities",
]
dependencies = [
  "customtkinter>=5.2.0",
  "paramiko>=3.4.0",
  "Pillow>=10.0.0",
]

[project.scripts]
nova-sftp-explorer = "sftp:main"

[project.urls]
Homepage = "https://github.com/tanmoy456/nova-sftp-explorer"
Repository = "https://github.com/tanmoy456/nova-sftp-explorer"
Issues = "https://github.com/tanmoy456/nova-sftp-explorer/issues"

[tool.setuptools]
py-modules = ["sftp", "ui", "preview", "sftp_client"]
